--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
-	<body>
-		hello
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>kieryum</title>
+</head>
+<body>
+	<div style="width: 1200px; height: 500px;margin: auto;padding: auto;">
+		<h2>这是我GitHub上的页面</h2>
+	</div>
+</body>
 </html>
