--- a/admin/index.html
+++ b/admin/index.html
@@ -7,5 +7,5 @@
 <body>
 	admin page!
 </body>
-<script type="text/javascript" src="/static/demo.js"></script>
+<script type="text/javascript" src="https://kieryum.github.io/static/js/demo.js"></script>
 </html>
