--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		    	<a href="">个人中心<span class="layui-badge-dot"></span></a>
 			</li>
 			<li class="layui-nav-item">
-			<a href=""><img src="static/image/head.jpg" class="layui-nav-img">我</a>
+			<a href=""><img src="https://kieryum.github.io/static/image/head.jpg" class="layui-nav-img">我</a>
 			<dl class="layui-nav-child">
 			  <dd><a href="javascript:;">修改信息</a></dd>
 			  <dd><a href="javascript:;">安全管理</a></dd>
