--- a/learn/index.html
+++ b/learn/index.html
@@ -3,9 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<title>lear</title>
+	<script type="text/javascript" src="https://kieryum.github.io/lib/vue/vue.js"></script>
 </head>
 <body>
 	<h1>using sqllit.js</h1>
 	<a href="https://github.com/kripken/sql.js">sqllit.js</a>
+	<ul>
+		<li><a href="https://github.com/lear/example">demo</a></li>
+		<li><a href="">demo</a></li>
+		<li><a href="">demo</a></li>
+	</ul>
 </body>
 </html>
