--- a/learn/index.html
+++ b/learn/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>lear</title>
-	<script type="text/javascript" src="https://kieryum.github.io/lib/vue/vue.js"></script>
+	<script type="text/javascript" src="https://kieryum.github.io/static/lib/vue/vue.js"></script>
 </head>
 <body>
 	<h1>using sqllit.js</h1>
