--- a/learn/index.html
+++ b/learn/index.html
@@ -9,7 +9,7 @@
 	<h1>using sqllit.js</h1>
 	<a href="https://github.com/kripken/sql.js">sqllit.js</a>
 	<ul>
-		<li><a href="https://github.com/lear/example">demo</a></li>
+		<li><a href="https://kieryum.github.io/lear/example">demo</a></li>
 		<li><a href="">demo</a></li>
 		<li><a href="">demo</a></li>
 	</ul>
